# hal_chirpmicro

./: CMakeLists.txt  Kconfig  README
fw_init_wrapper/: chirp_fw_init_wrapper.c  chirp_fw_init_wrapper.h
soniclib/: .gitignore  .jenkins.yml  CMakeLists.txt  CreateSourceCodeRelease.bat  LICENSE.txt  README.md  UpdateAsicFW.bat  clean.sh  configure.sh
soniclib/CMakeToolchains/: STM32F446ZE.cmake
soniclib/inc/: Doxyfile  README.md  ch101.h  ch101_finaltest.h  ch101_floor.h  ch101_gppc.h  ch101_gpr.h  ch101_gpr_narrow.h  ch101_gpr_narrow_wd.h  ch101_gpr_open.h  ch101_gpr_rxopt.h  ch101_gpr_rxopt_narrow.h  ch101_gpr_rxopt_narrow_wd.h  ch101_gpr_rxopt_wd.h  ch101_gpr_sr.h  ch101_gpr_sr_narrow.h  ch101_gpr_sr_narrow_wd.h  ch101_gpr_sr_open.h  ch101_gpr_sr_wd.h  ch101_gpr_wd.h  ch101_liquid.h  ch101_sonicsync.h  ch201.h  ch201_finaltest.h  ch201_gprmt.h  ch201_gprmt_wd.h  ch201_gprstr.h  ch201_gprstr_wd.h  ch201_presence.h  ch_common.h  ch_driver.h  chirp_bsp.h  soniclib.h
soniclib/src/: ch101_finaltest.c  ch101_finaltest_fw.c  ch101_floor.c  ch101_floor_fw.c  ch101_gppc.c  ch101_gppc_fw.c  ch101_gpr.c  ch101_gpr_fw.c  ch101_gpr_lowpwr_fw.c  ch101_gpr_narrow.c  ch101_gpr_narrow_fw.c  ch101_gpr_narrow_wd.c  ch101_gpr_narrow_wd_fw.c  ch101_gpr_open.c  ch101_gpr_open_fw.c  ch101_gpr_rxopt.c  ch101_gpr_rxopt_fw.c  ch101_gpr_rxopt_narrow.c  ch101_gpr_rxopt_narrow_fw.c  ch101_gpr_rxopt_narrow_wd.c  ch101_gpr_rxopt_narrow_wd_fw.c  ch101_gpr_rxopt_wd.c  ch101_gpr_rxopt_wd_fw.c  ch101_gpr_sr.c  ch101_gpr_sr_fw.c  ch101_gpr_sr_narrow.c  ch101_gpr_sr_narrow_fw.c  ch101_gpr_sr_narrow_wd.c  ch101_gpr_sr_narrow_wd_fw.c  ch101_gpr_sr_open.c  ch101_gpr_sr_open_fw.c  ch101_gpr_sr_wd.c  ch101_gpr_sr_wd_fw.c  ch101_gpr_wd.c  ch101_gpr_wd_fw.c  ch101_liquid.c  ch101_liquid_fw.c  ch101_sonicsync.c  ch101_sonicsync_master_fw.c  ch101_sonicsync_slave_fw.c  (+17 more)
soniclib/test/: jenkins_build.bat
soniclib/test/codesize/: README.md  app_config.h  chbsp_chirp_dummy.c  chirp_board_config.h  chirpmicro-codesize.ewd  chirpmicro-codesize.ewp  chirpmicro-codesize.ewt  chirpmicro-codesize.eww  main.c
